--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
@@ -25,6 +31,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.9.0",
     "@tanstack/eslint-plugin-query": "^5.57.2",
     "@types/react": "^18.3.3",
@@ -49,6 +57,11 @@
   },
   "lint-staged": {
     "*.{js,css,ts,tsx,jsx}": [
-      "prettier --write", "eslint --fix"]
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{js,ts,tsx,jsx,json,css,md}": [
+      "git add"
+    ]
   }
 }
