--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint --edit $1"
     }
   },
   "dependencies": {
@@ -59,9 +59,6 @@
     "*.{js,css,ts,tsx,jsx}": [
       "prettier --write",
       "eslint --fix"
-    ],
-    "*.{js,ts,tsx,jsx,json,css,md}": [
-      "git add"
     ]
   }
 }
